go/k8s/dockerfile/gitlab/ci-cd/gitlab.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
  namespace: kube-ops
spec:
  replicas: 1
  template:
    metadata:
      name: redis
      labels:
        app: redis
        name: redis
    spec:
      containers:
        - name: redis
          image: sameersbn/redis
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - mountPath: /var/lib/redis
              name: data
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            timeoutSeconds: 1
      volumes:
        - name: data
          emptyDir: {}
  selector:
    matchLabels:
      app: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: kube-ops
  labels:
    name: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: redis
      name: redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: postgresql
    name: postgresql
  namespace: kube-ops
spec:
  replicas: 1
  template:
    metadata:
      name: postgresql
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: sameersbn/postgresql:10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: data
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -h
                - localhost
                - -U
                - postgres
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -h
                - localhost
                - -U
                - postgres
            initialDelaySeconds: 5
            timeoutSeconds: 1
      volumes:
        - name: data
          emptyDir: {}
  selector:
    matchLabels:
      app: postgresql
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: kube-ops
  labels:
    app: postgresql
spec:
  selector:
    app: postgresql
  ports:
    - port: 5432
      name: postgres
      targetPort: postgres

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  labels:
    app: gitlab
  namespace: kube-ops
spec:
  replicas: 1
  template:
    metadata:
      name: gitlab
      labels:
        app: gitlab
    spec:
      containers:
        - name: gitlab
          image: sameersbn/gitlab:11.8.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
            - containerPort: 22
              name: ssh
          volumeMounts:
            - mountPath: /home/git/data
              name: data
          livenessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 180
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 5
            timeoutSeconds: 1
      volumes:
        - name: data
          emptyDir: {}
  selector:
    matchLabels:
      app: gitlab
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: kube-ops
  labels:
    name: gitlab
    app: gitlab
spec:
  selector:
    app: gitlab
  ports:
    - port: 80
      name: http
      targetPort: http
    - port: 22
      name: ssh
      targetPort: ssh
      nodePort: 30022
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: kube-ops
spec:
  rules:
    - host: gitlab.cicd.com
      http:
        paths:
          - backend:
              serviceName: gitlab
              servicePort: http
